Implement GET /claims request
