# src/routes/index.js
@@ -1,7 +1,9 @@
 const router = require('express').Router();
 
 const noticesRoute = require('./notices');
+const claimsRoute = require('./claims');
 
 router.use('/notices', noticesRoute);
+router.use('/claims', claimsRoute);
 
 module.exports = router;
