# swagger.yaml
@@ -1,33 +1,42 @@
 openapi: 3.0.0
 info:
   title: API
-  version: 0.0.1
+  version: 1.0.0
 servers:
-  - url: http://localhost:1082/
+  - url: 'http://localhost:1082/'
     description: Development
-  - url: https://hos-service.dogcatbmpz.by/
+  - url: 'https://hos-service.dogcatbmpz.by/'
     description: Production
 tags:
-- name: "Notices"
-  description: "CRUD for notices"
+  - name: Notices
+    description: CRUD for notices
+  - name: Claims
+    description: CRUD for claims
 paths:
   /notices:
     post:
       summary: Create new notice
       tags:
-      - "Notices"
+        - Notices
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NoticeRequestBody'
+              type: object
+              properties:
+                title:
+                  type: string
+                description:
+                  type: string
+                authorized:
+                  type: boolean
       responses:
         '201':
           description: Notice created successfully
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   success:
@@ -43,13 +52,13 @@ paths:
     get:
       summary: Get ID's of existing notices
       tags:
-      - "Notices"
+        - Notices
       responses:
         '200':
           description: Returns existing notices
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   success:
@@ -58,23 +67,24 @@ paths:
                     type: array
                     items:
                       type: string
-  /notices/{noticeId}:
+  '/notices/{noticeId}':
     get:
       summary: Get existing notice by ID
       tags:
-      - "Notices"
+        - Notices
       parameters:
-      - name: noticeId
-        in: path
-        description: ID of notice to return
-        required: true
-        type: string
+        - name: noticeId
+          in: path
+          description: ID of notice to return
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Returns requested notice
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   success:
@@ -90,19 +100,20 @@ paths:
     put:
       summary: Edit existing notice
       tags:
-      - "Notices"
+        - Notices
       parameters:
-      - name: noticeId
-        in: path
-        description: ID of notice to edit
-        required: true
-        type: string
+        - name: noticeId
+          in: path
+          description: ID of notice to edit
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Returns edited notice
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   success:
@@ -118,19 +129,20 @@ paths:
     delete:
       summary: Delete existing notice
       tags:
-      - "Notices"
+        - Notices
       parameters:
-      - name: noticeId
-        in: path
-        description: ID of notice to delete
-        required: true
-        type: string
+        - name: noticeId
+          in: path
+          description: ID of notice to delete
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Returns deleted notice
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   success:
@@ -143,6 +155,44 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /claims:
+    get:
+      summary: Get claims
+      tags:
+        - Claims
+      parameters:
+        - name: from
+          in: query
+          description: date from which to return
+          required: false
+          schema:
+            type: string
+        - name: to
+          in: query
+          description: date from which to return
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Returns claims filtered by from & to parameters
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Claim'
+        '400':
+          description: Fails when from or to parameters are invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
 components:
   schemas:
     Error:
@@ -170,17 +220,8 @@ components:
                 type: string
               param:
                 type: string
-              location: 
+              location:
                 type: string
-    NoticeRequestBody:
-      type: object
-      properties:
-        title:
-          type: string
-        description:
-          type: string
-        authorized:
-          type: boolean
     Notice:
       type: object
       properties:
@@ -192,3 +233,25 @@ components:
           type: string
         authorized:
           type: boolean
+    Claim:
+      type: object
+      properties:
+        user_id:
+          type: string
+        date:
+          type: string
+        type:
+          type: string
+          enum:
+            - morning
+            - evening
+        arrival_time:
+          type: string
+        additional_people:
+          type: integer
+        comment:
+          type: string
+        questionable:
+          type: boolean
+        guest_id:
+          type: string
